--- a/AutoHomeHardware/app/src/main/AndroidManifest.xml
+++ b/AutoHomeHardware/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vasaikar.autohomehardware">
+    <uses-permission android:name="com.google.android.things.permission.USE_PERIPHERAL_IO" />
 
     <application android:label="@string/app_name">
         <uses-library android:name="com.google.android.things" />
